# mkrecipe

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  docs_test_action.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  configuration.rst  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: config.rst  index.rst  mkrecipe.rst
mkrecipe/: __init__.py  __main__.py  config.py  recipe_template.ymlt
tests/: example_configs.py  test_cli.py  test_config.py  test_mkrecipe.py
tests/configs/: consolekit.pyproject.toml  flake8-encodings.pyproject.toml  github3-utils.pyproject.toml  importcheck.pyproject.toml  mathematical.pyproject.toml  sphinx-toolbox.pyproject.toml
tests/test_cli_/: test_mkrecipe_bad_type_7_consolekit_pyproject_toml_.txt  test_mkrecipe_bad_type_8_consolekit_pyproject_toml_.txt  test_mkrecipe_consolekit_pyproject_toml_.yaml  test_mkrecipe_flake8_encodings_pyproject_toml_.yaml  test_mkrecipe_importcheck_pyproject_toml_.yaml  test_mkrecipe_mathematical_pyproject_toml_.yaml  test_mkrecipe_sphinx_toolbox_pyproject_toml_.yaml  test_mkrecipe_wheel_consolekit_pyproject_toml_.yaml  test_mkrecipe_wheel_flake8_encodings_pyproject_toml_.yaml  test_mkrecipe_wheel_importcheck_pyproject_toml_.yaml  test_mkrecipe_wheel_sphinx_toolbox_pyproject_toml_.yaml
tests/test_config_/: test_mkrecipe_parser_valid_config_conda_channels_.yml  test_mkrecipe_parser_valid_config_extras_.yml  test_mkrecipe_parser_valid_config_extras_all_.yml  test_mkrecipe_parser_valid_config_extras_none0_.yml  test_mkrecipe_parser_valid_config_extras_none1_.yml  test_mkrecipe_parser_valid_config_license_key_.yml  test_mkrecipe_parser_valid_config_package_.yml  test_pep621_class_valid_config_COMPLETE_A_.yml  test_pep621_class_valid_config_COMPLETE_PROJECT_A_.yml  test_pep621_class_valid_config_authors_.yml  test_pep621_class_valid_config_description_.yml  test_pep621_class_valid_config_maintainers_.yml  test_pep621_class_valid_config_optional_dependencies_.yml  test_pep621_class_valid_config_requires_python_.yml  test_pep621_class_valid_config_requires_python_complex_.yml  test_pep621_class_valid_config_unicode_.yml  test_pep621_class_valid_config_urls_.yml
tests/test_mkrecipe_/: test_MaryBerry_make_consolekit_pyproject_toml_.yaml  test_MaryBerry_make_flake8_encodings_pyproject_toml_.yaml  test_MaryBerry_make_for_wheel_consolekit_pyproject_toml_.yaml  test_MaryBerry_make_for_wheel_flake8_encodings_pyproject_toml_.yaml  test_MaryBerry_make_for_wheel_mathematical_pyproject_toml_.yaml  test_MaryBerry_make_for_wheel_sphinx_toolbox_pyproject_toml_.yaml  test_MaryBerry_make_github3_utils_pyproject_toml_.yaml  test_MaryBerry_make_importcheck_pyproject_toml_.yaml  test_MaryBerry_make_sphinx_toolbox_pyproject_toml_.yaml  test_make_recipe_consolekit_pyproject_toml_.yaml  test_make_recipe_flake8_encodings_pyproject_toml_.yaml  test_make_recipe_mathematical_pyproject_toml_.yaml  test_make_recipe_sphinx_toolbox_pyproject_toml_.yaml  test_mkrecipe_consolekit_pyproject_toml_.yaml  test_mkrecipe_flake8_encodings_pyproject_toml_.yaml  test_mkrecipe_importcheck_pyproject_toml_.yaml  test_mkrecipe_sphinx_toolbox_pyproject_toml_.yaml
