[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "mkrecipe"
version = "0.1.0"
description = "A tool to create recipes for building conda packages from distributions on PyPI."
readme = "README.rst"
keywords = [ "pep621", "conda", "packaging", "distribution",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/mkrecipe"
"Issue Tracker" = "https://github.com/repo-helper/mkrecipe/issues"
"Source Code" = "https://github.com/repo-helper/mkrecipe"
Documentation = "https://mkrecipe.readthedocs.io/en/latest"

[project.scripts]
mkrecipe = "mkrecipe.__main__:main"

[tool.mkrecipe]
conda-channels = [ "domdfcoding", "conda-forge",]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Packaging",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
additional-files = [ "include mkrecipe/recipe_template.ymlt",]
